@@ -515,6 +515,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		farmersPop.setReligion(demographic.religion);
 		farmersPop.setLiteracy(demographic.literacy);
 		farmersPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		farmersPop.setIssues(demographic.issues);
 		pops.push_back(farmersPop);
 	}
 	if (labourers > 0)
@@ -526,6 +527,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		labourersPop.setReligion(demographic.religion);
 		labourersPop.setLiteracy(demographic.literacy);
 		labourersPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		labourersPop.setIssues(demographic.issues);
 		pops.push_back(labourersPop);
 	}
 	if (slaves > 0)
@@ -537,6 +539,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		slavesPop.setReligion(demographic.religion);
 		slavesPop.setLiteracy(demographic.literacy);
 		slavesPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		slavesPop.setIssues(demographic.issues);
 		pops.push_back(slavesPop);
 	}
 	if (soldiers > 0)
@@ -548,6 +551,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		soldiersPop.setReligion(demographic.religion);
 		soldiersPop.setLiteracy(demographic.literacy);
 		soldiersPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		soldiersPop.setIssues(demographic.issues);
 		pops.push_back(soldiersPop);
 	}
 	if (craftsmen > 0)
@@ -559,6 +563,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		craftsmenPop.setReligion(demographic.religion);
 		craftsmenPop.setLiteracy(demographic.literacy);
 		craftsmenPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		craftsmenPop.setIssues(demographic.issues);
 		pops.push_back(craftsmenPop);
 	}
 	if (artisans > 0)
@@ -570,6 +575,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		artisansPop.setReligion(demographic.religion);
 		artisansPop.setLiteracy(demographic.literacy);
 		artisansPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		artisansPop.setIssues(demographic.issues);
 		pops.push_back(artisansPop);
 	}
 	if (clergymen > 0)
@@ -581,6 +587,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		clergymenPop.setReligion(demographic.religion);
 		clergymenPop.setLiteracy(demographic.literacy);
 		clergymenPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		clergymenPop.setIssues(demographic.issues);
 		pops.push_back(clergymenPop);
 	}
 	if (clerks > 0)
@@ -592,6 +599,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		clerksPop.setReligion(demographic.religion);
 		clerksPop.setLiteracy(demographic.literacy);
 		clerksPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		clerksPop.setIssues(demographic.issues);
 		pops.push_back(clerksPop);
 	}
 	if (bureaucrats > 0)
@@ -603,6 +611,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		bureaucratsPop.setReligion(demographic.religion);
 		bureaucratsPop.setLiteracy(demographic.literacy);
 		bureaucratsPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		bureaucratsPop.setIssues(demographic.issues);
 		pops.push_back(bureaucratsPop);
 	}
 	if (officers > 0)
@@ -614,6 +623,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		officersPop.setReligion(demographic.religion);
 		officersPop.setLiteracy(demographic.literacy);
 		officersPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		officersPop.setIssues(demographic.issues);
 		pops.push_back(officersPop);
 	}
 	if (capitalists > 0)
@@ -625,6 +635,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		capitalistsPop.setReligion(demographic.religion);
 		capitalistsPop.setLiteracy(demographic.literacy);
 		capitalistsPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		capitalistsPop.setIssues(demographic.issues);
 		pops.push_back(capitalistsPop);
 	}
 	if (aristocrats > 0)
@@ -636,6 +647,7 @@ void V2Province::createPops(const V2Demographic& demographic, bool isStateCapita
 		aristocratsPop.setReligion(demographic.religion);
 		aristocratsPop.setLiteracy(demographic.literacy);
 		aristocratsPop.setIdeology(demographic.reactionary, demographic.conservative, demographic.liberal);
+		aristocratsPop.setIssues(demographic.issues);
 		pops.push_back(aristocratsPop);
 	}
 }
